--- a/app/src/main/res/drawable-v24/rounded_edittext_corners.xml
+++ b/app/src/main/res/drawable-v24/rounded_edittext_corners.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle" android:padding="10dp">
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimary"
+        android:color="@color/primaryColor"
         />
     <solid
-        android:color="@color/colorPrimary"
+        android:color="@color/primaryColor"
     />
     <corners
         android:bottomRightRadius="20dp"
