--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,182 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".fragment.LoginFragment">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@drawable/splash" />
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha="0.9"
-        android:background="@color/primaryDarkColor"
-
-        />
-
-    <TextView
-        android:id="@+id/applicationName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:text="@string/app_name"
-        android:textColor="@color/secondaryColor"
-        android:textSize="35sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/emailLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:textColorHint="@color/secondaryColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/applicationName">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/emailEditText"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/secondaryColor"
-            android:drawableStart="@drawable/ic_email"
-            android:drawablePadding="5dp"
-            android:hint="@string/email"
-            android:imeOptions="actionDone"
-            android:paddingBottom="15dp"
-            android:singleLine="true"
-            android:textColor="@color/secondaryColor"
-            android:textColorHint="@color/secondaryColor"
-
-            android:textSize="16sp" />
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/passwordLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        android:paddingBottom="15dp"
-        android:textColorHint="@color/secondaryColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emailLayout">
-
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/passwordEditText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/secondaryColor"
-            android:drawableStart="@drawable/ic_https"
-            android:drawablePadding="5dp"
-            android:hint="@string/password"
-            android:imeOptions="actionDone"
-            android:inputType="textPassword"
-            android:paddingBottom="15dp"
-            android:singleLine="true"
-            android:textColor="@color/secondaryColor"
-            android:textColorHint="@color/secondaryColor"
-
-            android:textSize="16sp" />
-    </android.support.design.widget.TextInputLayout>
-
-    <TextView
-        android:id="@+id/loginBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="100dp"
-        android:background="@drawable/rounded_edittext_corners"
-        android:padding="3dp"
-        android:text="@string/login"
-        android:textAlignment="center"
-        android:textColor="@color/secondaryColor"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
-
-        />
-
-    <TextView
-        android:id="@+id/forgetPasswordBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:padding="3dp"
-        android:text="@string/forgetPass"
-        android:textAlignment="center"
-        android:textColor="@color/secondaryColor"
-        android:textSize="15sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loginBtn"
-
-        />
-
-    <TextView
-        android:id="@+id/facebookBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="100dp"
-        android:background="@drawable/facebook_background"
-        android:padding="3dp"
-        android:text="@string/facebook"
-        android:textAlignment="center"
-        android:textColor="@color/secondaryColor"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/forgetPasswordBtn"
-
-        />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/facebookBtn"
-        >
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            tools:context=".fragment.LoginFragment">
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                                 xmlns:tools="http://schemas.android.com/tools"
+                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                 android:layout_width="match_parent"
+                                                 android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/registerText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:padding="9dp"
-            android:text="@string/register"
-            android:textAlignment="center"
-            android:textColor="@color/secondaryColor"
-            android:textSize="15sp"
-            />
-
+                android:id="@+id/arabic_language_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.9"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/title_tv"
+                app:layout_constraintVertical_bias="0.02"
+                android:text="@string/arabic_language"
+                android:textColor="@color/primaryColor"
+                android:textSize="22sp"
+        />
+        <TextView
+                android:id="@+id/title_tv"
+                android:text="@string/app_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/arabic_language_tv"
+                app:layout_constraintBottom_toTopOf="@id/email_et"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/primaryDarkColor"
+                android:textSize="40sp"/>
         <EditText
-            android:id="@+id/registerBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:backgroundTint="@color/secondaryColor"
-            android:padding="9dp"
-            android:text="@string/register_now"
-            android:textAlignment="center"
-            android:textColor="@color/secondaryColor"
-            android:textSize="15sp"
-             />
-    </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+                android:id="@+id/email_et"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/title_tv"
+                app:layout_constraintBottom_toBottomOf="@id/password_et"
+                android:layout_marginStart="60dp"
+                android:layout_marginEnd="60dp"
+                android:layout_marginBottom="10dp"
+                android:hint="@string/email"
+                android:imeOptions="actionDone"
+                android:inputType="textEmailAddress"
+                android:singleLine="true"
+                android:textColor="@color/primaryColor"
+                android:textColorHint="@android:color/darker_gray"
+                app:backgroundTint="@color/primaryColor"
+        />
+        <EditText
+                android:id="@+id/password_et"
+                android:textAlignment="viewStart"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/email_et"
+                app:layout_constraintBottom_toTopOf="@id/remember_me_cb"
+                android:layout_marginStart="60dp"
+                android:layout_marginEnd="60dp"
+                android:hint="@string/password"
+                android:imeOptions="actionDone"
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:textColor="@color/primaryColor"
+                android:textColorHint="@android:color/darker_gray"
+                app:backgroundTint="@color/primaryColor"/>
+        <CheckBox
+                android:id="@+id/remember_me_cb"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/remember_me_tv"
+                app:layout_constraintTop_toBottomOf="@id/password_et"
+                app:layout_constraintBottom_toTopOf="@id/login_btn"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintHorizontal_chainStyle="packed"/>
+        <TextView
+                android:id="@+id/remember_me_tv"
+                android:text="@string/remember_me"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/remember_me_cb"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/password_et"
+                app:layout_constraintBottom_toTopOf="@id/login_btn"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                android:textColor="@color/primaryDarkColor"
+                android:textSize="15sp"
+                app:layout_constraintHorizontal_chainStyle="packed"/>
+        <ocs.com.ashiak.util.AshiakTextView
+                android:id="@+id/login_btn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingTop="7dp"
+                android:paddingBottom="7dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/remember_me_cb"
+                app:layout_constraintBottom_toTopOf="@id/forgot_password_btn"
+                android:layout_marginStart="80dp"
+                android:layout_marginEnd="80dp"
+                android:layout_marginBottom="10dp"
+                android:minHeight="0dp"
+                android:background="@drawable/login_primary_button"
+                android:text="@string/login"
+                android:textColor="@android:color/white"/>
+        <TextView
+                android:id="@+id/forgot_password_btn"
+                android:text="@string/forgot_password"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/login_btn"
+                app:layout_constraintBottom_toTopOf="@id/or_tv"
+                android:background="@android:color/transparent"
+                android:textColor="@color/primaryDarkColor"
+                android:textSize="15sp"/>
+        <View
+                android:id="@+id/line_1"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/or_tv"
+                app:layout_constraintTop_toBottomOf="@id/forgot_password_btn"
+                app:layout_constraintBottom_toTopOf="@id/new_user_btn"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="60dp"
+                android:background="@color/primaryColor" />
+
+        <TextView
+                android:id="@+id/or_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toEndOf="@id/line_1"
+                app:layout_constraintEnd_toStartOf="@id/line_2"
+                app:layout_constraintTop_toBottomOf="@id/forgot_password_btn"
+                app:layout_constraintBottom_toTopOf="@id/new_user_btn"
+                android:layout_marginEnd="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                android:text="@string/or"
+                android:textColor="@color/primaryColor" />
+
+        <View
+                android:id="@+id/line_2"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                app:layout_constraintStart_toEndOf="@id/or_tv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/forgot_password_btn"
+                app:layout_constraintBottom_toTopOf="@id/new_user_btn"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="60dp"
+                android:background="@color/primaryColor" />
+
+        <ocs.com.ashiak.util.AshiakTextView
+                android:id="@+id/new_user_btn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/or_tv"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginStart="80dp"
+                android:layout_marginEnd="80dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/login_primary_button"
+                android:gravity="center"
+                android:text="@string/register"
+                android:paddingTop="7dp"
+                android:paddingBottom="7dp"
+                android:textColor="@android:color/white"/>
+
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
